# attoparsec-framer

./: .envrc  .gitignore  ChangeLog.md  README.md  attoparsec-framer.cabal  attoparsec-frames.cabal  cabal.project  default.nix  shell.nix
.github/workflows/: cabal.yml  ci.yml
src/Data/Attoparsec/: Framer.hs  Frames.hs
src/Data/Attoparsec/Framer/: Testing.hs
src/Data/Attoparsec/Frames/: Testing.hs
test/Attoparsec/: ToyFrame.hs  ToyFrameSpec.hs
toy/: Client.hs  Server.hs
toy/Attoparsec/: ToyFrame.hs
