cabal-version:      3.0
name:               attoparsec-frames
version:            0.1.0.0
synopsis:           Support for parsing frames of bytes and streams of frames
description:        Supports parsing frames of bytes
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tim Emiola
maintainer:         adetokunbo@emio.la
category:           Web
homepage:           https://github.com/adetokunbo/attoparsec-frames#readme
bug-reports:        https://github.com/adetokunbo/attoparsec-frames/issues
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/attoparsec-frames.git

library
  exposed-modules:  Data.Attoparsec.Frames
  hs-source-dirs:   src
  build-depends:
    , attoparsec  >=0.14.4   && <0.15
    , base        >=4.10     && <5
    , bytestring  >=0.10.8.2 && <0.12.0.0
    , text        >=1.2.3    && <2.2

  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite integration-test
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:  Attoparsec.ToyFrame
  hs-source-dirs: test
  build-depends:
    , async
    , attoparsec
    , attoparsec-binary
    , base
    , bytestring
    , text
    , hspec
